# nix-flake-templates

./: LICENSE  README.md  flake.nix
compatibility/: default.nix  shell.nix
container/: flake.nix  result
go/: .golangci.yml  README.md  default.nix  flake.nix  go.mod  gomod2nix.toml  lint.nix  shell.nix  treefmt.toml
go/cmd/hello-world/: main.go
go/internal/greet/: app.go  app_test.go
go/internal/reply/: reply.go
python/: .gitignore  flake.nix  pyproject.toml
python/app/: __init__.py  routes.py
rust/: .gitignore  Cargo.toml  flake.nix
simple/: flake.nix
