[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Isak Johansson <isak@irq1.se>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run-app = 'app:main'
